--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ span {
     font-family: var(--Abel);
 }
 
+.container {
+    margin: 0 5vw;
+}
+
 /* End Global Classes */
 
 /* navbar */
@@ -196,6 +200,7 @@ main .blog {
     background-position: right;
     height: 120vh;
     width: 100%;
+    background-size: 65%;
 }
 
 main .blog .blog-post {
@@ -223,6 +228,29 @@ main .blog-content .btn-blog {
 
 main .blog-content span {
     display: block;
+}
+
+section .container .owl-nav {
+    position: absolute;
+    top: 0%;
+    margin: 0 auto;
+    width: 100%;
+}
+
+.owl-nav .owl-prev .owl-nav-prev,
+.owl-nav .owl-next .owl-nav-next {
+    color: var(--text-grey);
+    background: transparent;
+    font-size: 2rem;
+}
+
+.owl-theme .owl-nav [class*='owl-']:hover {
+    background: transparent;
+    color: var(--text-grey);
+}
+
+.owl-theme .owl-nav [class*='owl-'] {
+    outline: none;
 }
 
 /* End Blog Carousel */
